# agent_lang_graph

./: README.md  compose.yaml  dockerfile  pyproject.toml
app/: custom_rag_agent.py  lang_graph_rag.py  make_faiss_db.py  simple_graph.py  test_openai_api.py
app/faiss_store/: index.faiss  index.pkl
lang_graph_practice/: lang_graph_rag.py  separate_graph.py
